# CineRoboSim

./: README.md  sdf_to_gif.py  sdf_to_video.py
sdf_to_gif/: package.xml  setup.cfg  setup.py
sdf_to_gif/launch/: sdf_to_gif.launch.py
sdf_to_gif/sdf_to_gif/: sdf_to_gif_node.py
